fixed spacing

--- a/public/tuiter/bookmarks/index.css
+++ b/public/tuiter/bookmarks/index.css
@@ -109,7 +109,7 @@
 
 .wd-retuit-text {
 
-    left:222.2px;
+    left:223.2px;
     top: 575px;
 }
 
@@ -122,7 +122,7 @@
 
 .wd-like-text {
     color: red;
-    left: 342.7px;
+    left: 343.7px;
     top: 575px;
 }
 
